ProjetoBase/compilador.output
Terminais sem uso na gramática

    ATRIBUICAO
    T_LABEL
    T_TYPE
    T_IF
    NUMERO
    T_ARRAY
    T_PROCEDURE
    T_FUNCTION
    T_GOTO
    MENOR
    T_THEN
    T_ELSE
    T_WHILE
    T_DO
    T_OR
    T_DIVISAO_INT
    T_AND
    T_NOT
    READ
    WRITE
    BOOLEAN
    TRUE
    FALSE
    OF
    REPEAT
    UNTIL
    MAIS
    MENOS
    MULTIPLICACAO
    MAIOR
    MENOR_OU_IGUAL
    MAIOR_OU_IGUAL
    DIFERENTE
    IGUAL
    T_DIVISAO_real
    ABRE_COLCHETES
    FECHA_COLCHETES


Gramática

    0 $accept: programa $end

    1 $@1: ε

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 $@2: ε

    4 bloco: parte_declara_vars $@2 comando_composto

    5 parte_declara_vars: var

    6 $@3: ε

    7 var: $@3 VAR declara_vars
    8    | declara_vars

    9 declara_vars: declara_vars declara_var
   10             | declara_var

   11 $@4: ε

   12 declara_var: $@4 lista_id_var DOIS_PONTOS tipo PONTO_E_VIRGULA

   13 tipo: INTEGER

   14 lista_id_var: lista_id_var VIRGULA IDENT
   15             | IDENT

   16 lista_idents: lista_idents VIRGULA IDENT
   17             | IDENT

   18 comando_composto: T_BEGIN comandos T_END

   19 comandos: ε


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    PROGRAM (258) 2
    ABRE_PARENTESES (259) 2
    FECHA_PARENTESES (260) 2
    VIRGULA (261) 14 16
    PONTO_E_VIRGULA (262) 2 12
    DOIS_PONTOS (263) 12
    PONTO (264) 2
    T_BEGIN (265) 18
    T_END (266) 18
    VAR (267) 7
    IDENT (268) 2 14 15 16 17
    ATRIBUICAO (269)
    T_LABEL (270)
    T_TYPE (271)
    T_IF (272)
    NUMERO (273)
    T_ARRAY (274)
    T_PROCEDURE (275)
    T_FUNCTION (276)
    T_GOTO (277)
    MENOR (278)
    T_THEN (279)
    T_ELSE (280)
    T_WHILE (281)
    T_DO (282)
    T_OR (283)
    T_DIVISAO_INT (284)
    T_AND (285)
    T_NOT (286)
    READ (287)
    WRITE (288)
    INTEGER (289) 13
    BOOLEAN (290)
    TRUE (291)
    FALSE (292)
    OF (293)
    REPEAT (294)
    UNTIL (295)
    MAIS (296)
    MENOS (297)
    MULTIPLICACAO (298)
    MAIOR (299)
    MENOR_OU_IGUAL (300)
    MAIOR_OU_IGUAL (301)
    DIFERENTE (302)
    IGUAL (303)
    T_DIVISAO_real (304)
    ABRE_COLCHETES (305)
    FECHA_COLCHETES (306)


Não terminais com as regras onde eles aparecem

    $accept (52)
        à esquerda: 0
    programa (53)
        à esquerda: 2
        à direita: 0
    $@1 (54)
        à esquerda: 1
        à direita: 2
    bloco (55)
        à esquerda: 4
        à direita: 2
    $@2 (56)
        à esquerda: 3
        à direita: 4
    parte_declara_vars (57)
        à esquerda: 5
        à direita: 4
    var (58)
        à esquerda: 7 8
        à direita: 5
    $@3 (59)
        à esquerda: 6
        à direita: 7
    declara_vars (60)
        à esquerda: 9 10
        à direita: 7 8 9
    declara_var (61)
        à esquerda: 12
        à direita: 9 10
    $@4 (62)
        à esquerda: 11
        à direita: 12
    tipo (63)
        à esquerda: 13
        à direita: 12
    lista_id_var (64)
        à esquerda: 14 15
        à direita: 12 14
    lista_idents (65)
        à esquerda: 16 17
        à direita: 2 16
    comando_composto (66)
        à esquerda: 18
        à direita: 4
    comandos (67)
        à esquerda: 19
        à direita: 18


Estado 0

    0 $accept: • programa $end

    $padrão  reduzir usando a regra 1 ($@1)

    programa  ir ao estado 1
    $@1       ir ao estado 2


Estado 1

    0 $accept: programa • $end

    $end  deslocar, e ir ao estado 3


Estado 2

    2 programa: $@1 • PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  deslocar, e ir ao estado 4


Estado 3

    0 $accept: programa $end •

    $padrão  aceitar


Estado 4

    2 programa: $@1 PROGRAM • IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 5


Estado 5

    2 programa: $@1 PROGRAM IDENT • ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  deslocar, e ir ao estado 6


Estado 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES • lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 7

    lista_idents  ir ao estado 8


Estado 7

   17 lista_idents: IDENT •

    $padrão  reduzir usando a regra 17 (lista_idents)


Estado 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents • FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   16 lista_idents: lista_idents • VIRGULA IDENT

    FECHA_PARENTESES  deslocar, e ir ao estado 9
    VIRGULA           deslocar, e ir ao estado 10


Estado 9

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES • PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  deslocar, e ir ao estado 11


Estado 10

   16 lista_idents: lista_idents VIRGULA • IDENT

    IDENT  deslocar, e ir ao estado 12


Estado 11

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA • bloco PONTO

    IDENT    reduzir usando a regra 11 ($@4)
    $padrão  reduzir usando a regra 6 ($@3)

    bloco               ir ao estado 13
    parte_declara_vars  ir ao estado 14
    var                 ir ao estado 15
    $@3                 ir ao estado 16
    declara_vars        ir ao estado 17
    declara_var         ir ao estado 18
    $@4                 ir ao estado 19


Estado 12

   16 lista_idents: lista_idents VIRGULA IDENT •

    $padrão  reduzir usando a regra 16 (lista_idents)


Estado 13

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco • PONTO

    PONTO  deslocar, e ir ao estado 20


Estado 14

    4 bloco: parte_declara_vars • $@2 comando_composto

    $padrão  reduzir usando a regra 3 ($@2)

    $@2  ir ao estado 21


Estado 15

    5 parte_declara_vars: var •

    $padrão  reduzir usando a regra 5 (parte_declara_vars)


Estado 16

    7 var: $@3 • VAR declara_vars

    VAR  deslocar, e ir ao estado 22


Estado 17

    8 var: declara_vars •
    9 declara_vars: declara_vars • declara_var

    IDENT    reduzir usando a regra 11 ($@4)
    $padrão  reduzir usando a regra 8 (var)

    declara_var  ir ao estado 23
    $@4          ir ao estado 19


Estado 18

   10 declara_vars: declara_var •

    $padrão  reduzir usando a regra 10 (declara_vars)


Estado 19

   12 declara_var: $@4 • lista_id_var DOIS_PONTOS tipo PONTO_E_VIRGULA

    IDENT  deslocar, e ir ao estado 24

    lista_id_var  ir ao estado 25


Estado 20

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO •

    $padrão  reduzir usando a regra 2 (programa)


Estado 21

    4 bloco: parte_declara_vars $@2 • comando_composto

    T_BEGIN  deslocar, e ir ao estado 26

    comando_composto  ir ao estado 27


Estado 22

    7 var: $@3 VAR • declara_vars

    $padrão  reduzir usando a regra 11 ($@4)

    declara_vars  ir ao estado 28
    declara_var   ir ao estado 18
    $@4           ir ao estado 19


Estado 23

    9 declara_vars: declara_vars declara_var •

    $padrão  reduzir usando a regra 9 (declara_vars)


Estado 24

   15 lista_id_var: IDENT •

    $padrão  reduzir usando a regra 15 (lista_id_var)


Estado 25

   12 declara_var: $@4 lista_id_var • DOIS_PONTOS tipo PONTO_E_VIRGULA
   14 lista_id_var: lista_id_var • VIRGULA IDENT

    VIRGULA      deslocar, e ir ao estado 29
    DOIS_PONTOS  deslocar, e ir ao estado 30


Estado 26

   18 comando_composto: T_BEGIN • comandos T_END

    $padrão  reduzir usando a regra 19 (comandos)

    comandos  ir ao estado 31


Estado 27

    4 bloco: parte_declara_vars $@2 comando_composto •

    $padrão  reduzir usando a regra 4 (bloco)


Estado 28

    7 var: $@3 VAR declara_vars •
    9 declara_vars: declara_vars • declara_var

    IDENT    reduzir usando a regra 11 ($@4)
    $padrão  reduzir usando a regra 7 (var)

    declara_var  ir ao estado 23
    $@4          ir ao estado 19


Estado 29

   14 lista_id_var: lista_id_var VIRGULA • IDENT

    IDENT  deslocar, e ir ao estado 32


Estado 30

   12 declara_var: $@4 lista_id_var DOIS_PONTOS • tipo PONTO_E_VIRGULA

    INTEGER  deslocar, e ir ao estado 33

    tipo  ir ao estado 34


Estado 31

   18 comando_composto: T_BEGIN comandos • T_END

    T_END  deslocar, e ir ao estado 35


Estado 32

   14 lista_id_var: lista_id_var VIRGULA IDENT •

    $padrão  reduzir usando a regra 14 (lista_id_var)


Estado 33

   13 tipo: INTEGER •

    $padrão  reduzir usando a regra 13 (tipo)


Estado 34

   12 declara_var: $@4 lista_id_var DOIS_PONTOS tipo • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 36


Estado 35

   18 comando_composto: T_BEGIN comandos T_END •

    $padrão  reduzir usando a regra 18 (comando_composto)


Estado 36

   12 declara_var: $@4 lista_id_var DOIS_PONTOS tipo PONTO_E_VIRGULA •

    $padrão  reduzir usando a regra 12 (declara_var)
